Fix wrapped todo description

--- a/src/main/resources/view/SoConnectTheme.css
+++ b/src/main/resources/view/SoConnectTheme.css
@@ -267,9 +267,10 @@
 
 .cell_big_label_todo {
     -fx-font-family: "Karla";
-    -fx-font-size: 22px;
+    -fx-font-size: 20px;
     -fx-font-weight: 700;
     -fx-text-fill: #C3E0FF;
+    -fx-wrap-text: true;
 }
 
 .cell_small_label_todo {
